# applier-v3

./: Cargo.toml  README.md
book/: Buffers and Indices.md  Introduction.md  Old implementation using Camera.md
book/.obsidian/: workspace.json
book/Beginner/: 1 - Dependencies and the window.md  2 - The Surface.md  3 - The Pipeline.md  The Pipeline.md
src/beginner/tutorial1-window/: Cargo.toml
src/beginner/tutorial2-surface/: Cargo.toml
src/beginner/tutorial2-surface/src/: main.rs  plugin.rs
src/beginner/tutorial3-pipeline/: Cargo.toml
src/beginner/tutorial3-pipeline/src/: plugin.rs
src/beginner/tutorial4-buffer/: Cargo.toml
src/beginner/tutorial4-buffer/src/: plugin.rs
src/beginner/tutorial5-textures/: Cargo.toml
src/beginner/tutorial5-textures/src/: main.rs  plugin.rs
src/beginner/tutorial6-uniform-buffers/: Cargo.toml
src/beginner/tutorial6-uniform-buffers/src/: plugin.rs  shaders.wgsl
src/beginner/tutorial7-instancing/: Cargo.toml
src/beginner/tutorial7-instancing/src/: plugin.rs
src/beginner/tutorial8-depth-buffer/: Cargo.toml
src/beginner/tutorial8-depth-buffer/src/: plugin.rs  shaders.wgsl
src/beginner/tutorial9-models/: Cargo.toml
src/beginner/tutorial9-models/src/: main.rs  plugin.rs
