[workspace]
resolver = "2"
members = ["src/beginner/tutorial1-window", "src/beginner/tutorial2-surface", "src/beginner/tutorial3-pipeline", "src/beginner/tutorial4-buffer", "src/beginner/tutorial5-textures", "src/beginner/tutorial6-uniform-buffers", "src/beginner/tutorial7-instancing", "src/beginner/tutorial8-depth-buffer"]
