[package]
name = "tutorial1-window"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tutorial1-window"
path = "src/main.rs"


[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_render",
  "multi-threaded",
] }
bytemuck = { version = "1.5", features = ["derive"] }
bevy_mod_debugdump = "0.10"
wgpu = { version = "0.19.3", default-features = false, features = [
  "wgsl",
  "dx12",
  "metal",
  "naga",
  "naga-ir",
  "fragile-send-sync-non-atomic-wasm",
] }
