[package]
name = "tutorial1-window"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tutorial1-window"
path = "src/main.rs"


[dependencies]
bevy = { default-features = false, git = "https://github.com/bevyengine/bevy.git", features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "multi_threaded",
  ] }