[package]
name = "tutorial2-surface"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tutorial2-surface"
path = "src/main.rs"


[dependencies]
bevy = { default-features = false, git = "https://github.com/bevyengine/bevy.git", features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "multi_threaded",
  ] }

bevy_mod_debugdump = "0.11"
wgpu = { version = "22", default-features = false, features = [
  "wgsl",
  "dx12",
  "metal",
  "naga-ir",
  "fragile-send-sync-non-atomic-wasm",
] }